# todo-rs

./: .env.saple  .gitignore  Cargo.toml  Dockerfile.dev  Insomnia.json  Insomnia_2023-11-08.json  README.md  docker-compose.yml
.github/workflows/: hadolint.yml  rust-clippy.yml
genjwt/: Cargo.toml
genjwt/src/: main.rs
src/: error.rs  main.rs  object.rs  store.rs
src/auth/: with_jwt.rs
src/model/: todo.rs
src/routes/: add_todo.rs  delete_todo.rs  get_todo.rs  get_todos.rs  router.rs
src/storage/: memstore.rs  mod.rs  store.rs
