[package]
name = "todo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
async-trait = "0.1.76"
jsonwebtoken = "9.2.0"
log = "0.4.20"
env_logger = "0.10.0"
mongodb = "2.6.1"
futures = "0.3.28"